Added details about Metaspace